fixed collapse bug

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -41,7 +41,7 @@ body {
 
 //Declare heights because of positioning of img element
 .carousel .item {
-  height: 550px;
+  height: 600px;
   background-color:#bbb;
 }
 .carousel img {
@@ -49,7 +49,7 @@ body {
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: 600px;
 }
 
 
